syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "FileStorageProto";
option objc_class_prefix = "FSP";

package file_storage;

service FileStorage {
    rpc GetAllFiles(Empty) returns (stream FileObject);

    rpc AddFile(FileObject) returns (FileObject);

    rpc AddMultipleFiles(stream FileObject) returns (stream FileObject);

    rpc UpdateFile(FileObject) returns (FileObject);

    rpc DeleteFile(FileObject) returns (FileObject);
}

message FileObject {
  string name = 1;
  string content = 2;
  string extension = 3;
}

message Empty {}
